--- a/Froguelike/Packages/manifest.json
+++ b/Froguelike/Packages/manifest.json
@@ -7,10 +7,13 @@
     "com.unity.2d.spriteshape": "7.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "2.2.0",
+    "com.unity.ads": "3.7.5",
+    "com.unity.analytics": "3.6.11",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.purchasing": "4.0.3",
     "com.unity.render-pipelines.universal": "12.1.0",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
@@ -18,6 +21,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.2",
+    "com.unity.xr.legacyinputhelpers": "2.1.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
