--- a/Exports/Latest Demo Build/mac/Froguelike.app/Contents/Info.plist
+++ b/Exports/Latest Demo Build/mac/Froguelike.app/Contents/Info.plist
@@ -11,7 +11,7 @@
     <key>CFBundleIconFile</key>
     <string>PlayerIcon.icns</string>
     <key>CFBundleIdentifier</key>
-    <string>com.PantoufleGames.TheStoryofFrog</string>
+    <string>com.LesGrenouilles.Froguelike</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
