--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /[Uu]serSettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-!/[Aa]ssets/**/*.meta
+#!/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -80,4 +80,5 @@ crashlytics-build.properties
 # Log files can be ignored.
 fmod_editor.log
 Froguelike/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+FMODStudioCache.asset.meta
 Froguelike/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
