--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /[Uu]serSettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-#!/[Aa]ssets/**/*.meta
+!/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -70,15 +70,13 @@ crashlytics-build.properties
 !/[Aa]ssets/Editor Default Resources/FMOD/*
 
 # Ignore the Cache folder since it is updated locally.
-/[Aa]ssets/Plugins/FMOD/Cache/*
+Froguelike/[Aa]ssets/Plugins/FMOD/Cache/*
 
 # Ignore bank files in the StreamingAssets folder.
-/[Aa]ssets/StreamingAssets/**/*.bank
-/[Aa]ssets/StreamingAssets/**/*.bank.meta
+Froguelike/[Aa]ssets/StreamingAssets/**/*.bank
+Froguelike/[Aa]ssets/StreamingAssets/**/*.bank.meta
 
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
-Froguelike/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
-FMODStudioCache.asset.meta
-Froguelike/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+
